--- a/package.json
+++ b/package.json
@@ -10,25 +10,30 @@
   },
   "dependencies": {
     "@5alid/cls": "^1.0.4",
+    "@5alid/schema": "^0.1.5",
+    "favicons": "^6.2.0",
     "framer-motion": "^1.11.1",
-    "next": "^9.4.4",
+    "immer": "^7.0.9",
+    "next": "^9.5.3",
+    "next-offline": "^5.0.2",
     "nprogress": "^0.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-hook-form": "^6.0.6",
-    "react-icons": "^3.10.0"
+    "react-hook-form": "^6.8.4"
   },
   "devDependencies": {
+    "@tailwindcss/custom-forms": "^0.2.1",
     "@types/node": "^14.0.13",
     "@types/nprogress": "^0.2.0",
     "@types/react": "^16.9.36",
     "@typescript-eslint/eslint-plugin": "^3.4.0",
     "@typescript-eslint/parser": "^3.4.0",
+    "dotenv": "^8.2.0",
     "eslint": "^7.3.1",
     "eslint-plugin-react": "^7.20.0",
     "eslint-plugin-react-hooks": "^4.0.4",
     "postcss-preset-env": "^6.7.0",
-    "tailwindcss": "^1.4.6",
-    "typescript": "^3.9.5"
+    "tailwindcss": "^1.8.10",
+    "typescript": "^4.0.3"
   }
 }
