--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@5alid/cls": "^1.0.4",
+    "@5alid/react-hooks": "^0.1.0",
     "@5alid/schema": "^0.1.5",
     "framer-motion": "^1.11.1",
     "immer": "^7.0.9",
