--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@5alid/cls": "^1.0.4",
     "@5alid/react-hooks": "^0.1.0",
     "@5alid/schema": "^0.1.5",
+    "@headlessui/react": "^0.2.0",
     "framer-motion": "^2.9.4",
     "immer": "^7.0.9",
     "next": "^10.0.0",
@@ -21,17 +22,18 @@
     "react-hook-form": "^6.8.4"
   },
   "devDependencies": {
-    "@tailwindcss/custom-forms": "^0.2.1",
+    "@tailwindcss/forms": "^0.2.1",
+    "@tailwindcss/typography": "^0.3.1",
     "@types/node": "^14.0.13",
     "@types/nprogress": "^0.2.0",
     "@types/react": "^16.9.36",
     "@typescript-eslint/eslint-plugin": "^3.4.0",
     "@typescript-eslint/parser": "^3.4.0",
+    "autoprefixer": "^9",
     "eslint": "^7.3.1",
     "eslint-plugin-react": "^7.20.0",
     "eslint-plugin-react-hooks": "^4.0.4",
-    "postcss-preset-env": "^6.7.0",
-    "tailwindcss": "^1.8.10",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "typescript": "^4.0.3"
   }
 }
