re organize deps

--- a/package.json
+++ b/package.json
@@ -12,14 +12,13 @@
     "@5alid/cls": "^1.0.4",
     "@5alid/react-hooks": "^0.1.0",
     "@5alid/schema": "^0.1.5",
-    "@headlessui/react": "^0.2.0",
-    "framer-motion": "^2.9.4",
     "immer": "^7.0.9",
     "next": "^10.0.0",
     "nprogress": "^0.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-hook-form": "^6.8.4"
+    "react-hook-form": "^6.11.3",
+    "swr": "^0.3.9"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.2.1",
