--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@5alid/react-hooks": "^0.1.0",
     "immer": "^7.0.9",
-    "next": "^10.0.0",
+    "next": "^10.0.3",
     "nprogress": "^0.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -28,11 +28,12 @@
     "@types/react": "^16.9.36",
     "@typescript-eslint/eslint-plugin": "^3.4.0",
     "@typescript-eslint/parser": "^3.4.0",
-    "autoprefixer": "^9",
+    "autoprefixer": "^10.0.2",
     "eslint": "^7.3.1",
     "eslint-plugin-react": "^7.20.0",
     "eslint-plugin-react-hooks": "^4.0.4",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
+    "postcss": "^8.1.10",
+    "tailwindcss": "^2.0.1",
     "typescript": "^4.0.3"
   }
 }
