--- a/package.json
+++ b/package.json
@@ -10,18 +10,21 @@
   },
   "dependencies": {
     "@5alid/react-hooks": "^0.1.0",
+    "@tailwindcss/aspect-ratio": "^0.2.0",
     "immer": "^8.0.1",
-    "next": "^10.0.3",
+    "next": "^10.1.2",
+    "next-themes": "^0.0.14",
     "nprogress": "^0.2.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.11.3",
     "swr": "^0.3.9",
-    "tiny-schema-validator": "^0.1.1",
-    "xcls": "^0.1.0"
+    "tiny-schema-validator": "^3.0.1",
+    "xcls": "^0.1.5"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.2.1",
+    "@tailwindcss/jit": "^0.1.18",
     "@tailwindcss/typography": "^0.3.1",
     "@types/node": "^14.0.13",
     "@types/nprogress": "^0.2.0",
@@ -33,7 +36,7 @@
     "eslint-plugin-react": "^7.20.0",
     "eslint-plugin-react-hooks": "^4.0.4",
     "postcss": "^8.1.10",
-    "tailwindcss": "^2.0.1",
+    "tailwindcss": "^2.0.4",
     "typescript": "^4.0.3"
   }
 }
