--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
     "start": "next start"
   },
   "dependencies": {
-    "@5alid/react-hooks": "^0.1.0",
-    "@tailwindcss/aspect-ratio": "^0.2.0",
-    "immer": "^8.0.1",
+    "immer": "^9.0.1",
     "next": "^10.1.2",
     "next-themes": "^0.0.14",
     "nprogress": "^0.2.0",
@@ -20,9 +18,11 @@
     "react-hook-form": "^6.11.3",
     "swr": "^0.3.9",
     "tiny-schema-validator": "^3.0.1",
-    "xcls": "^0.1.5"
+    "xcls": "^0.1.5",
+    "zustand": "^3.3.3"
   },
   "devDependencies": {
+    "@tailwindcss/aspect-ratio": "^0.2.0",
     "@tailwindcss/forms": "^0.2.1",
     "@tailwindcss/jit": "^0.1.18",
     "@tailwindcss/typography": "^0.3.1",
@@ -37,6 +37,6 @@
     "eslint-plugin-react-hooks": "^4.0.4",
     "postcss": "^8.1.10",
     "tailwindcss": "^2.0.4",
-    "typescript": "^4.0.3"
+    "typescript": "^4.2.3"
   }
 }
